--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+html, body{
+      height:100%;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
