--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -1,4 +1,21 @@
 
-.bac{
-    background-color:#ccc;
+.ant-menu-horizontal{
+    border:0;
+}
+.ant-menu{
+    background-color:transparent;
+    color:#fff;
+    line-height:64px;
+}
+.ant-menu-horizontal>.ant-menu-item-active, .ant-menu-horizontal>.ant-menu-item-open, .ant-menu-horizontal>.ant-menu-item-selected, .ant-menu-horizontal>.ant-menu-item:hover, .ant-menu-horizontal>.ant-menu-submenu-active, .ant-menu-horizontal>.ant-menu-submenu-open, .ant-menu-horizontal>.ant-menu-submenu-selected, .ant-menu-horizontal>.ant-menu-submenu:hover{
+    background-color:#1890ff;
+    color:#fff;
+    border:0;
+}
+.ant-menu-horizontal>.ant-menu-item, .ant-menu-horizontal>.ant-menu-submenu{
+    border:0;
+    top:0
+}
+.ant-layout-header{
+    padding:0 20px;
 }
