--- a/src/claim/components/TopMenu/TopMenu.less
+++ b/src/claim/components/TopMenu/TopMenu.less
@@ -1,4 +1,12 @@
 .top-header{
+    width:100%;
+    display: flex;
+    flex-direction:row;
+    .logo{
+        min-width:180px;
+        line-height:64px;
+        text-align:center;
+    }
     .ant-menu{
         background-color:transparent;
         color:#fff;
