--- a/src/claim/components/TopMenu/TopMenu.less
+++ b/src/claim/components/TopMenu/TopMenu.less
@@ -2,15 +2,22 @@
     width:100%;
     display: flex;
     flex-direction:row;
-    .logo{
-        min-width:180px;
-        line-height:64px;
-        text-align:center;
+    justify-content: space-between;
+    .header-left{
+        display: flex;
+        flex-direction:row;
+        justify-content: space-between;
+        .logo{
+            min-width:180px;
+            line-height:64px;
+            text-align:center;
+        }
+        .ant-menu{
+            background-color:transparent;
+            color:#fff;
+            border:0;
+        }
     }
-    .ant-menu{
-        background-color:transparent;
-        color:#fff;
-        border:0;
-    }
+
 }
 
