--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -19,3 +19,8 @@
 .ant-layout-header{
     padding:0 20px;
 }
+.ant-menu-horizontal>.ant-menu-item>a:hover,
+.ant-menu-horizontal>.ant-menu-item>a,
+.ant-menu-horizontal>.ant-menu-item-selected>a{
+    color:#fff;
+}
