--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -24,3 +24,13 @@
 .ant-menu-horizontal>.ant-menu-item-selected>a{
     color:#fff;
 }
+
+.ant-menu-inline .ant-menu-item, .ant-menu-inline .ant-menu-submenu-title, .ant-menu-vertical-left .ant-menu-item, .ant-menu-vertical-left .ant-menu-submenu-title, .ant-menu-vertical-right .ant-menu-item, .ant-menu-vertical-right .ant-menu-submenu-title, .ant-menu-vertical .ant-menu-item, .ant-menu-vertical .ant-menu-submenu-title{
+    margin-top:0;
+}
+.ant-menu-submenu>.ant-menu{
+    background-color:transparent;
+}
+.ant-menu-inline, .ant-menu-vertical, .ant-menu-vertical-left{
+    border:0px;
+}
