--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -19,10 +19,14 @@
 .ant-layout-header{
     padding:0 20px;
 }
+.ant-menu-item>a,
 .ant-menu-horizontal>.ant-menu-item>a:hover,
 .ant-menu-horizontal>.ant-menu-item>a,
 .ant-menu-horizontal>.ant-menu-item-selected>a{
     color:#fff;
+}
+.ant-menu-item-selected>a{
+    color:#1890ff;
 }
 
 .ant-menu-inline .ant-menu-item, .ant-menu-inline .ant-menu-submenu-title, .ant-menu-vertical-left .ant-menu-item, .ant-menu-vertical-left .ant-menu-submenu-title, .ant-menu-vertical-right .ant-menu-item, .ant-menu-vertical-right .ant-menu-submenu-title, .ant-menu-vertical .ant-menu-item, .ant-menu-vertical .ant-menu-submenu-title{
@@ -31,6 +35,7 @@
 .ant-menu-submenu>.ant-menu{
     background-color:transparent;
 }
+
 .ant-menu-inline, .ant-menu-vertical, .ant-menu-vertical-left{
     border:0px;
 }
