--- a/src/claim/pages/Home/Home_css.less
+++ b/src/claim/pages/Home/Home_css.less
@@ -3,8 +3,12 @@
     h1{
         color:#fff;
     }
-    
+
     .ant-layout-sider{
         background-color:#021b33
     }
 }
+.menu_nav{
+    width:200px;
+}
+
